feat(jail): ship isolated interpreter worker
Vis-Session: ff83edc9-247d-4f04-9fab-3dd7072d5a34